--- a/index.html
+++ b/index.html
@@ -1,5 +1,2 @@
-<h1>Redirecting...</h1>
-<title>Redirecting...</title>
-<script>
-  window.location.href = "/static/crazygames.html";
-</script>
+<embed style="margin: 0; padding: 0;" height="100%" width="100%" src="static/iframe.html#https://crazygames.com"></embed>
+<title>Crazy Games</title>
